comentarios de utilidad

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <!-- Menu lateral -->
 
     <aside class="menu__container">
-        <ul class="menu__lista">
+        <ul class="menu__lista">            /*ul ES PADRE DE li*/
             <li>
                 <a class="menu__itens" href="#">
                     <i class="icono__inicio icono-item"></i>
